--- a/sn-article.tex
+++ b/sn-article.tex
@@ -96,22 +96,43 @@ In each of the following subsections, we describe the annotation guidelines for 
 
 Each placard is a flowchart encoding instructions to guide annotators in annotating the RoB question by question for the signalling questions in the Revised Cochrane RoB tool 2.0.
 The flowchart starts with the title informing the annotators of which question they are annotating for.
-The first diamond in the actual instructional flowchart asks the annotators to look for a specific information or part of text and if found instructs them to annotate it.
+The first diamond in the actual instructional flowchart asks the annotators to look for specific information or part of the text and, if found, instructs them to annotate it.
+There are little colour-coded arrows flanking the diamond instructing the annotators to first look for the information in the green arrow region (for e.g., in the Results section). 
+If the information is not found in the green-coded arrow, check for it in the yellow-coded arrow (e.g., a table or a flowchart).
+If for a particular question, no information is found, we assume that the text did not have any information for that particular signalling question.
 \textcolor{red}{Include a generic description about the colours, logos, shapes and flowchart elements in the placards here...}
+%
+%
+%
+\subsection{Signalling question: 1.1}
+%
+OXO
+%
+%
+%
+\subsection{Signalling question: 1.2}
+%
+OXO
+%
+%
+%
+\subsection{Signalling question: 1.3}
+%
+OXO
 %
 %
 %
 \subsection{Signalling question: 2.3}
 %
 For annotation instructions for this signalling question, ``Were there deviations from the intended intervention that arose because of the trial context?'' follow the Flowchart~\ref{fig:2_3}.
-
-\begin{figure}
+%
+\begin{figure}[hbt]
     \centering
     \includegraphics[width=\textwidth]{figures/2_3.jpg}
     \caption{Annotation instructions for the RoB 2.3 signalling question.}
     \label{fig:2_3}
 \end{figure}
-
+%
 The first diamond in the flowchart asks the annotators to search for quantities of deviation with a thought bubble hinting to them that these deviations are not the dropout rate in the trial.
 Deviations from the intended intervention are defined as any unintentional changes that may have occurred in the intervention being studied due to the trial context. 
 For example, participants may not have complied with the study protocol, or there may have been problems with the delivery of the intervention that could have influenced the study outcomes.
@@ -119,12 +140,19 @@ Dropouts, on the other hand, refer to participants who withdrew from the study o
 Dropout rates can potentially introduce bias into a study if the characteristics of the participants who dropped out are different from those who completed the study.
 High dropout rates can also affect the statistical power of the study and its ability to draw valid conclusions.
 While both deviations from the intended intervention and dropout rates can potentially introduce bias into a study, they are not the same thing and should be evaluated separately when assessing the risk of bias in a study.
-The diamond element also hints to the annotators that they can find this information in the text of the Results section (either within the allocation paragraph or the recruitment paragraph.)
-
+The diamond element also hints to the annotators that they can find this information in the text of the Results section, either within the allocation paragraph or the recruitment paragraph (green-coded arrow).
+If the information was not found within the Results section, look for it in the flowchart (either the flowcharts themselves or their captions).
+If no percentage or deviation or the number of deviations were identified in the text, do not annotate anything, and this document will be automatically marked as a ``No information'' for this signalling question.
+If the percentage of deviation was identified, then annotate the full sentence where this information is found.
+Next, go to the next diamond following the ``yes'' flow and judge whether these deviations were due to the trial context.
+If the deviations arose due to trial context, mark the annotated text as ``2.3 Yes Bad'' and ``2.3 No Good'' otherwise.
+Now this part is quite subjective, but at least we have the annotated information about the percentage/number of deviations which could be used to train the ML models.
+We let the reviewers be a judge of the trial context once they discover the deviation information.
+Ultimately, the review of deviations and trial context is subjective, but the annotated information can be used to train machine learning models.
 %
 %
 %
-\subsection{2.3}
+\subsection{2.4}
 %
 %
 %
