completed describing the placard 2_4

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -152,7 +152,30 @@ Ultimately, the review of deviations and trial context is subjective, but the an
 %
 %
 %
-\subsection{2.4}
+\subsection{2.4 }
+%
+For annotation instructions for this signalling question, ``Were these deviations likely to have affected the outcome?'' follow the Flowchart~\ref{fig:2_4}.
+%
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/2_4.jpg}
+    \caption{Annotation instructions for the RoB 2.3 signalling question.}
+    \label{fig:2_4}
+\end{figure}
+%
+Do not annotate for this question if the answer to the previous question was ``2.3 No Good'' otherwise follow the instructions below.
+In randomized clinical trials, deviations from the planned study protocol may occur for various reasons, such as the participant not following the intervention as intended or the trial site not adhering to the study procedures.
+These deviations are known as "protocol deviations" or "protocol violations."
+The question "Were these deviations likely to have affected the outcome?" in the revised Cochrane RoB 2.0 tool refers to whether the protocol deviations had the potential to influence the study results.
+The aim of this question is to assess the RoB due to the protocol deviations, which may have introduced systematic error or affected the internal validity of the study.
+If the deviations were unlikely to have affected the study outcome, then this question would be answered with "No."
+However, if the deviations were likely to have affected the study outcome, then this question would be answered with "Yes," indicating that the study is at high risk of bias.
+If it is unclear whether the deviations affected the outcome, the answer would be "Some concerns."
+To annotate the information from the previous question, we identify the percentage of deviation (a number) and annotate it, while for this question we look for the reasons for these deviations and annotate them.
+The reasons could be found in either the Results section or in the Method section if not in the Results section.
+If you identify the reason for this deviation and mark it then follow the path along ``yes'' and judge whether these deviations could affect the outcome.
+If they do, mark the annotated reason for deviation as ``2.4 Yes Bad'' and ``2.4 No Good''otherwise.
+%
 %
 %
 %
