--- a/sn-article.tex
+++ b/sn-article.tex
@@ -89,6 +89,14 @@
 
 %%%%%%%%%%%%%%%%
 %% Background %%
+\section*{Generic annotation guidelines}
+\label{sec:generic}
+%
+The information to answer this question should usually be found in the Methods section (prioritized in the green arrow). 
+If the information was not found in the section mentioned in the green arrow, try to search for it in the section mentioned in the yellow arrow.
+%
+%
+%
 \section*{Annotation Guidelines for RoB domain 1}
 \label{sec:dom1}
 %
@@ -106,7 +114,25 @@ If for a particular question, no information is found, we assume that the text d
 %
 \subsection*{Signalling question: 1.1}
 %
-OXO
+Follow the Flowchart~\ref{fig:1_1} for annotation instructions of the signalling question, ``Was the allocation sequence random?''.
+%
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/1_1.png}
+    \caption{Annotation instructions for the RoB 1.1 signalling question.}
+    \label{fig:1_1}
+\end{figure}
+
+%
+If the allocation sequence is generated randomly, this reduces the risk of bias, as it ensures that the allocation is not influenced by the researchers' preferences or the participants' characteristics.
+Some of the good random allocation methods include Simple randomization (coin flipping, random number generator), stratified randomization, blocked randomization, cluster randomization, and adaptive randomization.
+If the allocation sequence was not generated using a proper randomization method, this increases the risk of bias in the study.
+For e.g., if the allocation sequence was generated using a non-random method, such as alternating assignment or assignment based on participant characteristics, this could introduce bias into the study.
+Following this explanation, the first diamond in the flowchart~\ref{fig:1_1}, instructs the annotators to identify randomization method for allocation sequence and if a proper randomization method is found, mark the method (this should be a few words or a phrase and not a complete sentence) with ``1.1 Yes Good''.
+If the text describes a bad or improper method of randomization, mark the text with ``1.1 No Bad''.
+If you did not find any information about the randomization methodology, but found terms like ``random'', ``randomized trial'' or phrases like ``we did random allocation'', then mark such phrases with label ``1.1 No Information''.
+The information about random sequence allocation could be found in the methods section (first priority) or the abstract (second priority).
+Notice that for this signalling question, the annotators are required to mark phrases rather than full sentences.
 %
 %
 %
