restructured and generic guidelines updated

--- a/sn-article.tex
+++ b/sn-article.tex
@@ -92,14 +92,6 @@
 \section*{Generic annotation guidelines}
 \label{sec:generic}
 %
-The information to answer this question should usually be found in the Methods section (prioritized in the green arrow). 
-If the information was not found in the section mentioned in the green arrow, try to search for it in the section mentioned in the yellow arrow.
-%
-%
-%
-\section*{Annotation Guidelines for RoB domain 1}
-\label{sec:dom1}
-%
 In each of the following subsections, we describe the annotation guidelines for the signalling questions using the instructional placards developed through consultation with RoB assessment and natural language processing experts.
 
 Each placard is a flowchart encoding instructions to guide annotators in annotating the RoB question by question for the signalling questions in the Revised Cochrane RoB tool 2.0.
@@ -109,6 +101,13 @@ There are little colour-coded arrows flanking the diamond instructing the annota
 If the information is not found in the green-coded arrow, check for it in the yellow-coded arrow (e.g., a table or a flowchart).
 If for a particular question, no information is found, we assume that the text did not have any information for that particular signalling question.
 \textcolor{red}{Include a generic description about the colours, logos, shapes and flowchart elements in the placards here...}
+%
+%
+%
+\section*{Annotation Guidelines for RoB domain 1}
+\label{sec:dom1}
+%
+The first risk domain of bias in the revised Cochrane Risk of Bias (RoB) 2.0 tool is "Bias arising from the randomization process" which includes the subdomains "Random sequence generation" and "Allocation concealment". This domain assesses the potential for bias related to the randomization process, which is an important factor in reducing the risk of selection bias in randomized controlled trials (RCTs).
 %
 %
 %
