--- a/sn-article.tex
+++ b/sn-article.tex
@@ -137,7 +137,42 @@ Notice that for this signalling question, the annotators are required to mark ph
 %
 \subsection*{Signalling question: 1.2}
 %
-OXO
+Follow the Flowchart~\ref{fig:1_2} for annotation instructions of the signalling question, ``Was the allocation sequence concealed until participants were enrolled and assigned to interventions?''.
+%
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\textwidth]{figures/1_2.png}
+    \caption{Annotation instructions for the RoB 1.2 signalling question.}
+    \label{fig:1_2}
+\end{figure}
+
+
+In randomized controlled trials (RCTs), the allocation sequence determines the order in which participants are assigned to each intervention group.
+Adequate concealment of the allocation sequence refers to the process of keeping the sequence hidden from those who are involved in enrolling and assigning participants to intervention groups.
+This helps to prevent the possibility of selection bias, which can occur if those enrolling participants in the trial have knowledge of the allocation sequence and can manipulate the assignment of participants to intervention groups based on that knowledge.
+If the allocation sequence is not adequately concealed until participants are enrolled and assigned to interventions, this can increase the risk of bias and may lead to systematic differences between the intervention groups.
+For example, if the allocation sequence is known to the investigators or coordinators, they may selectively enroll participants who are more likely to benefit from a particular intervention, or they may assign participants to one intervention group over another based on personal biases or preferences.
+
+
+The good methods of randomization:
+Centralized randomization: This involves using a central unit or an independent third-party to generate and conceal the allocation sequence. This helps to ensure that the allocation sequence is kept hidden from those enrolling and assigning participants to intervention groups.
+Sealed opaque envelopes: This involves preparing sealed envelopes with the allocation sequence inside. The envelopes are then kept in a secure location and opened sequentially as participants are enrolled in the trial.
+Online randomization tools: This involves using secure online systems to generate and conceal the allocation sequence. The system ensures that the allocation sequence is not visible to those enrolling and assigning participants to intervention groups.
+
+The bad methods of randomization:
+Using an open list: This involves using a visible list of randomization codes, which allows those enrolling and assigning participants to intervention groups to see the allocation sequence. This method does not provide adequate concealment of the allocation sequence and increases the risk of selection bias.
+
+Using a predictable sequence: This involves using a predictable sequence to allocate participants to intervention groups, such as alternating between groups or using birth dates to determine group assignment. This method does not provide adequate concealment of the allocation sequence and increases the risk of selection bias.
+
+Using the participant's choice: This involves allowing participants to choose their intervention group. This method does not provide adequate concealment of the allocation sequence and increases the risk of selection bias, as participants may choose the intervention group based on personal preferences or expectations.
+
+
+Following this explanation, the first diamond in the flowchart~\ref{fig:1_2}, instructs the annotators to identify method of allocation concealment and if a proper concealment method is found, mark the method (this should be a few words or a phrase and not a complete sentence) with ``1.2 Yes Good''.
+If you found text describing the method of allocation concealment but it lacks some information to make judgment, then label the marked text as ``1.2 No Information''.
+If the text describes a bad or improper method of allocation concealment, mark the text with ``1.2 No Bad''.
+The information about allocation concealment could be found in the methods section (first priority) or the abstract (second priority).
+Notice that for this signalling question too, the annotators are required to mark phrases rather than full sentences.
+%
 %
 %
 %
